--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,13 @@
 <h1>Meine Aufgaben</h1>
 <p>Neue Aufgaben eintragen</p>
+<p>
+  <% @items.each do |item| %>
+    <div class="well">
+      <h3><%= item.title %></h3>
+      <p><%= item.description %></p>
+      </div>
+  <% end %>
+</p>
+
+<%= link_to 'Neue Aufgabe erstellen', new_item_path, class: 'btn btn-primary' %>
+
